// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    id={null}
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
      id={null}
      rows={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 jeAbEq"
        id="default"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Data Range (default)
        </label>
        <div
          className="Bar__BarLayout-icfo76-2 blSqfx"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fNcQEg"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
              id="default_left_container"
              rows={null}
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                fontSize="0.876em"
                fontWeight={600}
                htmlFor={null}
                letterSpacing="0px"
              >
                Min
              </label>
              <input
                autoComplete="off"
                className="TextInput__Input-sc-1fep8p8-2 fYseJG"
                cols=""
                disabled={false}
                id="default_left"
                list={null}
                name="default_left"
                onBlur={null}
                onChange={[Function]}
                onFocus={null}
                onKeyPress={null}
                pattern={null}
                placeholder={null}
                rows=""
                type="text"
                value={null}
              />
            </section>
          </div>
          <div
            className="Bar__Slot-icfo76-1 kZQbjh"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
              id="default_right_container"
              rows={null}
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                fontSize="0.876em"
                fontWeight={600}
                htmlFor={null}
                letterSpacing="0px"
              >
                Max
              </label>
              <input
                autoComplete="off"
                className="TextInput__Input-sc-1fep8p8-2 fYseJG"
                cols=""
                disabled={false}
                id="default_right"
                list={null}
                name="default_right"
                onBlur={null}
                onChange={[Function]}
                onFocus={null}
                onKeyPress={null}
                pattern={null}
                placeholder={null}
                rows=""
                type="text"
                value={null}
              />
            </section>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 jeAbEq"
        id="options"
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0px"
        >
          Data Range (with options)
        </label>
        <div
          className="Bar__BarLayout-icfo76-2 blSqfx"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-icfo76-1 fNcQEg"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 iAwVFR"
              id={null}
              rows={null}
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                fontSize="0.876em"
                fontWeight={600}
                htmlFor={null}
                letterSpacing="0px"
              >
                Min
              </label>
              <div
                className=" css-jf3hug-container"
                id="options_left"
                onKeyDown={[Function]}
              >
                <div
                  className=" css-14ku2k9-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-g1d714-ValueContainer"
                  >
                    <div
                      className=" css-krol22-placeholder"
                    />
                    <div
                      className="css-b8ldur-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={false}
                          id="react-select-2-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-rci3ok-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-1jw44s5-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-6q0nyr-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="options_left"
                  type="hidden"
                  value=""
                />
              </div>
            </section>
          </div>
          <div
            className="Bar__Slot-icfo76-1 kZQbjh"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 iAwVFR"
              id={null}
              rows={null}
            >
              <label
                className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                fontSize="0.876em"
                fontWeight={600}
                htmlFor={null}
                letterSpacing="0px"
              >
                Max
              </label>
              <div
                className=" css-jf3hug-container"
                id="options_right"
                onKeyDown={[Function]}
              >
                <div
                  className=" css-14ku2k9-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-g1d714-ValueContainer"
                  >
                    <div
                      className=" css-krol22-placeholder"
                    />
                    <div
                      className="css-b8ldur-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={false}
                          id="react-select-3-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-rci3ok-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-1jw44s5-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-6q0nyr-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="options_right"
                  type="hidden"
                  value=""
                />
              </div>
            </section>
          </div>
        </div>
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          id={null}
          letterSpacing="0.2px"
        >
          Hang in there, buddy, I'm here to help!
        </p>
      </section>
    </section>
  </form>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 jeAbEq"
    id="knobs"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Data Label
    </label>
    <div
      className="Bar__BarLayout-icfo76-2 blSqfx"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
          id="knobs_left_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Min
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 fYseJG"
            cols=""
            disabled={false}
            id="knobs_left"
            list={null}
            name="knobs_left"
            onBlur={null}
            onChange={[Function]}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="text"
            value={null}
          />
        </section>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
          id="knobs_right_container"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Max
          </label>
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 fYseJG"
            cols=""
            disabled={false}
            id="knobs_right"
            list={null}
            name="knobs_right"
            onBlur={null}
            onChange={[Function]}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="text"
            value={null}
          />
        </section>
      </div>
    </div>
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Help text goes here...
    </p>
  </section>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    id={null}
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 ceKbHJ Form__Header-v2wrel-1 fWCIUW"
      id={null}
      rows={null}
    >
      <h4
        className="Typography__TitleText-sc-19auepv-2 czurBm"
        fontSize="1.25em"
        fontWeight={600}
        letterSpacing="0px"
      >
        States
      </h4>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW Form__Inputs-v2wrel-3 dLfNrm"
      id={null}
      rows={null}
    >
      <section
        className="Form__Section-v2wrel-2 dIXoJq"
      >
        <h5
          className="Typography__TitleText-sc-19auepv-2 KxMwb"
          fontSize="1.15em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Input Range (default)
        </h5>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 jeAbEq"
          id="input"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Input Range
          </label>
          <div
            className="Bar__BarLayout-icfo76-2 blSqfx"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
                id="input_left_container"
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Min
                </label>
                <input
                  autoComplete="off"
                  className="TextInput__Input-sc-1fep8p8-2 fYseJG"
                  cols=""
                  disabled={false}
                  id="input_left"
                  list={null}
                  name="input_left"
                  onBlur={null}
                  onChange={[Function]}
                  onFocus={null}
                  onKeyPress={null}
                  pattern={null}
                  placeholder={null}
                  rows=""
                  type="text"
                  value={null}
                />
              </section>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
                id="input_right_container"
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Max
                </label>
                <input
                  autoComplete="off"
                  className="TextInput__Input-sc-1fep8p8-2 fYseJG"
                  cols=""
                  disabled={false}
                  id="input_right"
                  list={null}
                  name="input_right"
                  onBlur={null}
                  onChange={[Function]}
                  onFocus={null}
                  onKeyPress={null}
                  pattern={null}
                  placeholder={null}
                  rows=""
                  type="text"
                  value={null}
                />
              </section>
            </div>
          </div>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 fXSQss"
          id="inputError"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Input Range (error)
          </label>
          <div
            className="Bar__BarLayout-icfo76-2 blSqfx"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
                id="inputError_left_container"
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Min
                </label>
                <input
                  autoComplete="off"
                  className="TextInput__Input-sc-1fep8p8-2 ewEYun"
                  cols=""
                  disabled={false}
                  id="inputError_left"
                  list={null}
                  name="inputError_left"
                  onBlur={null}
                  onChange={[Function]}
                  onFocus={null}
                  onKeyPress={null}
                  pattern={null}
                  placeholder={null}
                  rows=""
                  type="text"
                  value={null}
                />
              </section>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
                id="inputError_right_container"
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Max
                </label>
                <input
                  autoComplete="off"
                  className="TextInput__Input-sc-1fep8p8-2 ewEYun"
                  cols=""
                  disabled={false}
                  id="inputError_right"
                  list={null}
                  name="inputError_right"
                  onBlur={null}
                  onChange={[Function]}
                  onFocus={null}
                  onKeyPress={null}
                  pattern={null}
                  placeholder={null}
                  rows=""
                  type="text"
                  value={null}
                />
              </section>
            </div>
          </div>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 fXSQss"
          id="inputError"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Input Range (error)
          </label>
          <div
            className="Bar__BarLayout-icfo76-2 blSqfx"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
                id="inputError_left_container"
                rows={null}
              >
                <input
                  autoComplete="off"
                  className="TextInput__Input-sc-1fep8p8-2 ewEYun"
                  cols=""
                  disabled={false}
                  id="inputError_left"
                  list={null}
                  name="inputError_left"
                  onBlur={null}
                  onChange={[Function]}
                  onFocus={null}
                  onKeyPress={null}
                  pattern={null}
                  placeholder={null}
                  rows=""
                  type="text"
                  value={null}
                />
              </section>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 inWPqt"
                id="inputError_right_container"
                rows={null}
              >
                <input
                  autoComplete="off"
                  className="TextInput__Input-sc-1fep8p8-2 ewEYun"
                  cols=""
                  disabled={false}
                  id="inputError_right"
                  list={null}
                  name="inputError_right"
                  onBlur={null}
                  onChange={[Function]}
                  onFocus={null}
                  onKeyPress={null}
                  pattern={null}
                  placeholder={null}
                  rows=""
                  type="text"
                  value={null}
                />
              </section>
            </div>
          </div>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Out of range!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 jeAbEq"
          id="inputError"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Input Range (error)
          </label>
          <div
            className="Bar__BarLayout-icfo76-2 blSqfx"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
                id="inputError_left_container"
                rows={null}
              >
                <input
                  autoComplete="off"
                  className="TextInput__Input-sc-1fep8p8-2 fYseJG"
                  cols=""
                  disabled={false}
                  id="inputError_left"
                  list={null}
                  name="inputError_left"
                  onBlur={null}
                  onChange={[Function]}
                  onFocus={null}
                  onKeyPress={null}
                  pattern={null}
                  placeholder={null}
                  rows=""
                  type="text"
                  value={null}
                />
              </section>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
                id="inputError_right_container"
                rows={null}
              >
                <input
                  autoComplete="off"
                  className="TextInput__Input-sc-1fep8p8-2 fYseJG"
                  cols=""
                  disabled={false}
                  id="inputError_right"
                  list={null}
                  name="inputError_right"
                  onBlur={null}
                  onChange={[Function]}
                  onFocus={null}
                  onKeyPress={null}
                  pattern={null}
                  placeholder={null}
                  rows=""
                  type="text"
                  value={null}
                />
              </section>
            </div>
          </div>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 jeAbEq"
          id="inputDisabled"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Input Range (disabled)
          </label>
          <div
            className="Bar__BarLayout-icfo76-2 blSqfx"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
                id="inputDisabled_left_container"
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Min
                </label>
                <input
                  autoComplete="off"
                  className="TextInput__Input-sc-1fep8p8-2 gBQbXI"
                  cols=""
                  disabled={true}
                  id="inputDisabled_left"
                  list={null}
                  name="inputDisabled_left"
                  onBlur={null}
                  onChange={[Function]}
                  onFocus={null}
                  onKeyPress={null}
                  pattern={null}
                  placeholder={null}
                  rows=""
                  type="text"
                  value={null}
                />
              </section>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 eaRsCT"
                id="inputDisabled_right_container"
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Max
                </label>
                <input
                  autoComplete="off"
                  className="TextInput__Input-sc-1fep8p8-2 gBQbXI"
                  cols=""
                  disabled={true}
                  id="inputDisabled_right"
                  list={null}
                  name="inputDisabled_right"
                  onBlur={null}
                  onChange={[Function]}
                  onFocus={null}
                  onKeyPress={null}
                  pattern={null}
                  placeholder={null}
                  rows=""
                  type="text"
                  value={null}
                />
              </section>
            </div>
          </div>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
      </section>
      <section
        className="Form__Section-v2wrel-2 dIXoJq"
      >
        <h5
          className="Typography__TitleText-sc-19auepv-2 KxMwb"
          fontSize="1.15em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Select Range
        </h5>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 jeAbEq"
          id="select"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Select Range
          </label>
          <div
            className="Bar__BarLayout-icfo76-2 blSqfx"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 iAwVFR"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Min
                </label>
                <div
                  className=" css-jf3hug-container"
                  id="select_left"
                  onKeyDown={[Function]}
                >
                  <div
                    className=" css-14ku2k9-control"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <div
                      className=" css-g1d714-ValueContainer"
                    >
                      <div
                        className=" css-krol22-placeholder"
                      />
                      <div
                        className="css-b8ldur-Input"
                      >
                        <div
                          className=""
                          style={
                            Object {
                              "display": "inline-block",
                            }
                          }
                        >
                          <input
                            aria-autocomplete="list"
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            disabled={false}
                            id="react-select-4-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            spellCheck="false"
                            style={
                              Object {
                                "background": 0,
                                "border": 0,
                                "boxSizing": "content-box",
                                "color": "inherit",
                                "fontSize": "inherit",
                                "label": "input",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "1px",
                              }
                            }
                            tabIndex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          >
                            
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        className=" css-rci3ok-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        className=" css-1jw44s5-indicatorContainer"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="css-6q0nyr-Svg"
                          focusable="false"
                          height={20}
                          viewBox="0 0 20 20"
                          width={20}
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="select_left"
                    type="hidden"
                    value=""
                  />
                </div>
              </section>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 iAwVFR"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Max
                </label>
                <div
                  className=" css-jf3hug-container"
                  id="select_right"
                  onKeyDown={[Function]}
                >
                  <div
                    className=" css-14ku2k9-control"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <div
                      className=" css-g1d714-ValueContainer"
                    >
                      <div
                        className=" css-krol22-placeholder"
                      />
                      <div
                        className="css-b8ldur-Input"
                      >
                        <div
                          className=""
                          style={
                            Object {
                              "display": "inline-block",
                            }
                          }
                        >
                          <input
                            aria-autocomplete="list"
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            disabled={false}
                            id="react-select-5-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            spellCheck="false"
                            style={
                              Object {
                                "background": 0,
                                "border": 0,
                                "boxSizing": "content-box",
                                "color": "inherit",
                                "fontSize": "inherit",
                                "label": "input",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "1px",
                              }
                            }
                            tabIndex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          >
                            
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        className=" css-rci3ok-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        className=" css-1jw44s5-indicatorContainer"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="css-6q0nyr-Svg"
                          focusable="false"
                          height={20}
                          viewBox="0 0 20 20"
                          width={20}
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="select_right"
                    type="hidden"
                    value=""
                  />
                </div>
              </section>
            </div>
          </div>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 jeAbEq"
          id="selectOperation"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Select Range
          </label>
          <div
            className="Bar__BarLayout-icfo76-2 blSqfx"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 iAwVFR"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Min
                </label>
                <div
                  className=" css-jf3hug-container"
                  id="selectOperation_left"
                  onKeyDown={[Function]}
                >
                  <div
                    className=" css-14ku2k9-control"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <div
                      className=" css-g1d714-ValueContainer"
                    >
                      <div
                        className=" css-krol22-placeholder"
                      />
                      <div
                        className="css-b8ldur-Input"
                      >
                        <div
                          className=""
                          style={
                            Object {
                              "display": "inline-block",
                            }
                          }
                        >
                          <input
                            aria-autocomplete="list"
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            disabled={false}
                            id="react-select-6-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            spellCheck="false"
                            style={
                              Object {
                                "background": 0,
                                "border": 0,
                                "boxSizing": "content-box",
                                "color": "inherit",
                                "fontSize": "inherit",
                                "label": "input",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "1px",
                              }
                            }
                            tabIndex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          >
                            
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        className=" css-rci3ok-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        className=" css-1jw44s5-indicatorContainer"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="css-6q0nyr-Svg"
                          focusable="false"
                          height={20}
                          viewBox="0 0 20 20"
                          width={20}
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="selectOperation_left"
                    type="hidden"
                    value=""
                  />
                </div>
              </section>
            </div>
            <div
              className="Bar__Slot-icfo76-1 hVtzoz"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 iAwVFR"
                id={null}
                rows={null}
              >
                <div
                  className=" css-jf3hug-container"
                  id="selectOperation_center"
                  onKeyDown={[Function]}
                >
                  <div
                    className=" css-14ku2k9-control"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <div
                      className=" css-g1d714-ValueContainer"
                    >
                      <div
                        className=" css-krol22-placeholder"
                      />
                      <div
                        className="css-b8ldur-Input"
                      >
                        <div
                          className=""
                          style={
                            Object {
                              "display": "inline-block",
                            }
                          }
                        >
                          <input
                            aria-autocomplete="list"
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            disabled={false}
                            id="react-select-7-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            spellCheck="false"
                            style={
                              Object {
                                "background": 0,
                                "border": 0,
                                "boxSizing": "content-box",
                                "color": "inherit",
                                "fontSize": "inherit",
                                "label": "input",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "1px",
                              }
                            }
                            tabIndex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          >
                            
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        className=" css-rci3ok-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        className=" css-1jw44s5-indicatorContainer"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="css-6q0nyr-Svg"
                          focusable="false"
                          height={20}
                          viewBox="0 0 20 20"
                          width={20}
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="selectOperation_center"
                    type="hidden"
                    value=""
                  />
                </div>
              </section>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 iAwVFR"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Max
                </label>
                <div
                  className=" css-jf3hug-container"
                  id="selectOperation_right"
                  onKeyDown={[Function]}
                >
                  <div
                    className=" css-14ku2k9-control"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <div
                      className=" css-g1d714-ValueContainer"
                    >
                      <div
                        className=" css-krol22-placeholder"
                      />
                      <div
                        className="css-b8ldur-Input"
                      >
                        <div
                          className=""
                          style={
                            Object {
                              "display": "inline-block",
                            }
                          }
                        >
                          <input
                            aria-autocomplete="list"
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            disabled={false}
                            id="react-select-8-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            spellCheck="false"
                            style={
                              Object {
                                "background": 0,
                                "border": 0,
                                "boxSizing": "content-box",
                                "color": "inherit",
                                "fontSize": "inherit",
                                "label": "input",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "1px",
                              }
                            }
                            tabIndex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          >
                            
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        className=" css-rci3ok-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        className=" css-1jw44s5-indicatorContainer"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="css-6q0nyr-Svg"
                          focusable="false"
                          height={20}
                          viewBox="0 0 20 20"
                          width={20}
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="selectOperation_right"
                    type="hidden"
                    value=""
                  />
                </div>
              </section>
            </div>
          </div>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            This help text has been passed through a prop!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 fXSQss"
          id="selectError"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Select Range (error)
          </label>
          <div
            className="Bar__BarLayout-icfo76-2 blSqfx"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 hBpwoQ"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Min
                </label>
                <div
                  className=" css-jf3hug-container"
                  id="selectError_left"
                  onKeyDown={[Function]}
                >
                  <div
                    className=" css-14ku2k9-control"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <div
                      className=" css-g1d714-ValueContainer"
                    >
                      <div
                        className=" css-krol22-placeholder"
                      />
                      <div
                        className="css-b8ldur-Input"
                      >
                        <div
                          className=""
                          style={
                            Object {
                              "display": "inline-block",
                            }
                          }
                        >
                          <input
                            aria-autocomplete="list"
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            disabled={false}
                            id="react-select-9-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            spellCheck="false"
                            style={
                              Object {
                                "background": 0,
                                "border": 0,
                                "boxSizing": "content-box",
                                "color": "inherit",
                                "fontSize": "inherit",
                                "label": "input",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "1px",
                              }
                            }
                            tabIndex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          >
                            
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        className=" css-rci3ok-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        className=" css-1jw44s5-indicatorContainer"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="css-6q0nyr-Svg"
                          focusable="false"
                          height={20}
                          viewBox="0 0 20 20"
                          width={20}
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="selectError_left"
                    type="hidden"
                    value=""
                  />
                </div>
              </section>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 hBpwoQ"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Max
                </label>
                <div
                  className=" css-jf3hug-container"
                  id="selectError_right"
                  onKeyDown={[Function]}
                >
                  <div
                    className=" css-14ku2k9-control"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <div
                      className=" css-g1d714-ValueContainer"
                    >
                      <div
                        className=" css-krol22-placeholder"
                      />
                      <div
                        className="css-b8ldur-Input"
                      >
                        <div
                          className=""
                          style={
                            Object {
                              "display": "inline-block",
                            }
                          }
                        >
                          <input
                            aria-autocomplete="list"
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            disabled={false}
                            id="react-select-10-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            spellCheck="false"
                            style={
                              Object {
                                "background": 0,
                                "border": 0,
                                "boxSizing": "content-box",
                                "color": "inherit",
                                "fontSize": "inherit",
                                "label": "input",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "1px",
                              }
                            }
                            tabIndex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          >
                            
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        className=" css-rci3ok-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        className=" css-1jw44s5-indicatorContainer"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="css-6q0nyr-Svg"
                          focusable="false"
                          height={20}
                          viewBox="0 0 20 20"
                          width={20}
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="selectError_right"
                    type="hidden"
                    value=""
                  />
                </div>
              </section>
            </div>
          </div>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Out of range!
          </p>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 jeAbEq"
          id="selectDisabled"
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
            fontSize="0.876em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0px"
          >
            Select Range (disabled)
          </label>
          <div
            className="Bar__BarLayout-icfo76-2 blSqfx"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 fNcQEg"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 cpRwXO"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Min
                </label>
                <div
                  className=" css-wqw4zn-container"
                  id="selectDisabled_left"
                  onKeyDown={[Function]}
                >
                  <div
                    className=" css-pitv1e-control"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <div
                      className=" css-g1d714-ValueContainer"
                    >
                      <div
                        className=" css-krol22-placeholder"
                      />
                      <div
                        className="css-b8ldur-Input"
                      >
                        <div
                          className=""
                          style={
                            Object {
                              "display": "inline-block",
                            }
                          }
                        >
                          <input
                            aria-autocomplete="list"
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            disabled={true}
                            id="react-select-11-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            spellCheck="false"
                            style={
                              Object {
                                "background": 0,
                                "border": 0,
                                "boxSizing": "content-box",
                                "color": "inherit",
                                "fontSize": "inherit",
                                "label": "input",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "1px",
                              }
                            }
                            tabIndex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          >
                            
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        className=" css-1qpt39k-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        className=" css-11055fn-indicatorContainer"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="css-6q0nyr-Svg"
                          focusable="false"
                          height={20}
                          viewBox="0 0 20 20"
                          width={20}
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
            <div
              className="Bar__Slot-icfo76-1 kZQbjh"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo SelectMenu__SelectMenuContainer-sc-12n3hw0-1 cpRwXO"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
                  fontSize="0.876em"
                  fontWeight={600}
                  htmlFor={null}
                  letterSpacing="0px"
                >
                  Max
                </label>
                <div
                  className=" css-wqw4zn-container"
                  id="selectDisabled_right"
                  onKeyDown={[Function]}
                >
                  <div
                    className=" css-pitv1e-control"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <div
                      className=" css-g1d714-ValueContainer"
                    >
                      <div
                        className=" css-krol22-placeholder"
                      />
                      <div
                        className="css-b8ldur-Input"
                      >
                        <div
                          className=""
                          style={
                            Object {
                              "display": "inline-block",
                            }
                          }
                        >
                          <input
                            aria-autocomplete="list"
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            disabled={true}
                            id="react-select-12-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            spellCheck="false"
                            style={
                              Object {
                                "background": 0,
                                "border": 0,
                                "boxSizing": "content-box",
                                "color": "inherit",
                                "fontSize": "inherit",
                                "label": "input",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "1px",
                              }
                            }
                            tabIndex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style={
                              Object {
                                "height": 0,
                                "left": 0,
                                "overflow": "scroll",
                                "position": "absolute",
                                "top": 0,
                                "visibility": "hidden",
                                "whiteSpace": "pre",
                              }
                            }
                          >
                            
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        className=" css-1qpt39k-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        className=" css-11055fn-indicatorContainer"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="css-6q0nyr-Svg"
                          focusable="false"
                          height={20}
                          viewBox="0 0 20 20"
                          width={20}
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </div>
          </div>
          <p
            className="Typography__Paragraph-sc-19auepv-3 eGFGis"
            fontSize="0.75em"
            fontWeight={600}
            id={null}
            letterSpacing="0.2px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
        </section>
      </section>
    </section>
  </form>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo DataRange__RangeContainer-u3cy9q-0 jeAbEq"
    id="skeleton"
    rows={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 blSqfx"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 fNcQEg"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
          id="skeleton_left_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 fYseJG"
            cols=""
            disabled={false}
            id="skeleton_left"
            list={null}
            name="skeleton_left"
            onBlur={null}
            onChange={[Function]}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="text"
            value={null}
          />
        </section>
      </div>
      <div
        className="Bar__Slot-icfo76-1 kZQbjh"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 dwSQHo TextInput__TextInputContainer-sc-1fep8p8-0 fwdfyr"
          id="skeleton_right_container"
          rows={null}
        >
          <input
            autoComplete="off"
            className="TextInput__Input-sc-1fep8p8-2 fYseJG"
            cols=""
            disabled={false}
            id="skeleton_right"
            list={null}
            name="skeleton_right"
            onBlur={null}
            onChange={[Function]}
            onFocus={null}
            onKeyPress={null}
            pattern={null}
            placeholder={null}
            rows=""
            type="text"
            value={null}
          />
        </section>
      </div>
    </div>
  </section>
</div>
`;
